--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-google-login": "^2.0.34"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
